# SQT-Firmware

./: .gitignore  README.md
Voy-SQT_V3/: CMakeLists.txt  sdkconfig.old
Voy-SQT_V3/include/: http.h  self_test.h  wifi.h
Voy-SQT_V3/main/: CMakeLists.txt  display.c  http.c  io_pins.c  main.c  sensors.c  wifi.c
Voy-SQT_V4/: sdkconfig
Voy-SQT_V4/include/: display.h  geolocation.h  http.h  io_pins.h  private_config.h  sensors.h
Voy-SQT_V4/main/: CMakeLists.txt  geolocation.c  http.c  main.c  self_test.c  sensors.c  wifi.c
